fix automatic car overlap bug where new ride is fully covering existing ride

--- a/src/components/rides/Rides.module.scss
+++ b/src/components/rides/Rides.module.scss
@@ -66,8 +66,14 @@
 
     &-button {
       color: red;
-      font-weight: bold;
       padding: 0 16px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      
+      &:hover {
+        text-decoration: underline;
+      }
     }
 
     &-grid {
